[project]
name = "ragcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "gtts>=2.5.4",
    "langchain>=1.2.15",
    "langchain-core>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langid>=1.1.6",
    "pyttsx3>=2.99",
    "sentence-transformers>=5.4.1",
    "sounddevice>=0.5.5",
    "speechrecognition>=3.16.1",
    "tiktoken>=0.12.0",
    "torch",
    "torchvision",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }